--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
             "email": "goshensoftinc@gmail.com"
         }
     ],
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^8"
